--- a/software/main.lfm
+++ b/software/main.lfm
@@ -1,12 +1,12 @@
 object MainForm: TMainForm
-  Left = 374
+  Left = 501
   Height = 499
-  Top = 116
-  Width = 802
+  Top = 209
+  Width = 842
   ActiveControl = RadioSPI
   Caption = 'AsProgrammer'
   ClientHeight = 479
-  ClientWidth = 802
+  ClientWidth = 842
   Constraints.MinHeight = 300
   Constraints.MinWidth = 300
   Menu = MainMenu
@@ -19,9 +19,10 @@ object MainForm: TMainForm
     Left = 0
     Height = 20
     Top = 364
-    Width = 802
+    Width = 842
     Align = alBottom
     Max = 0
+    ParentFont = False
     TabOrder = 0
     BarShowText = True
   end
@@ -29,11 +30,12 @@ object MainForm: TMainForm
     Left = 0
     Height = 34
     Top = 0
-    Width = 802
+    Width = 842
     ButtonHeight = 32
     ButtonWidth = 32
     Caption = 'ToolBar'
     Images = ImageList
+    ParentFont = False
     TabOrder = 1
     object ButtonRead: TToolButton
       Left = 81
@@ -119,6 +121,7 @@ object MainForm: TMainForm
       Caption = 'SPI'
       Checked = True
       OnChange = RadioSPIChange
+      ParentFont = False
       TabOrder = 0
       TabStop = True
     end
@@ -129,6 +132,7 @@ object MainForm: TMainForm
       Width = 37
       Caption = 'I2C'
       OnChange = RadioI2CChange
+      ParentFont = False
       TabOrder = 1
     end
     object RadioMw: TRadioButton
@@ -138,6 +142,7 @@ object MainForm: TMainForm
       Width = 107
       Caption = 'Microwire(16bit)'
       OnChange = RadioMwChange
+      ParentFont = False
       TabOrder = 2
     end
     object ToolButton2: TToolButton
@@ -193,41 +198,44 @@ object MainForm: TMainForm
   end
   object GroupChipSettings: TGroupBox
     Left = 0
-    Height = 59
+    Height = 307
     Top = 34
-    Width = 802
-    Align = alTop
-    ClientHeight = 39
-    ClientWidth = 798
+    Width = 160
+    Align = alLeft
+    ClientHeight = 287
+    ClientWidth = 156
+    ParentFont = False
     TabOrder = 2
     object ComboChipSize: TComboBox
-      Left = 128
+      Left = 24
       Height = 23
       Hint = 'Размер чипа в байтах'
-      Top = 16
+      Top = 56
       Width = 100
       ItemHeight = 15
       MaxLength = 10
+      ParentFont = False
       ParentShowHint = False
       ShowHint = True
       TabOrder = 0
       Text = 'Chip size'
     end
     object Label2: TLabel
-      Left = 128
+      Left = 8
       Height = 16
-      Top = 0
+      Top = 40
       Width = 100
       Alignment = taCenter
       AutoSize = False
       Caption = 'Размер'
       ParentColor = False
+      ParentFont = False
     end
     object ComboPageSize: TComboBox
-      Left = 234
+      Left = 24
       Height = 23
       Hint = 'Размер страницы'
-      Top = 16
+      Top = 96
       Width = 100
       ItemHeight = 15
       Items.Strings = (
@@ -245,37 +253,40 @@ object MainForm: TMainForm
         '1056'
       )
       MaxLength = 10
+      ParentFont = False
       ParentShowHint = False
       ShowHint = True
       TabOrder = 1
       Text = 'Page size'
     end
     object Label1: TLabel
-      Left = 234
+      Left = 24
       Height = 16
-      Top = 0
+      Top = 80
       Width = 100
       Alignment = taCenter
       AutoSize = False
       Caption = 'Страница'
       ParentColor = False
+      ParentFont = False
     end
     object Label4: TLabel
-      Left = 340
+      Left = 24
       Height = 16
-      Top = 0
+      Top = 120
       Width = 100
       Alignment = taCenter
       AutoSize = False
       Caption = 'Тип адреса'
       ParentColor = False
+      ParentFont = False
       Visible = False
     end
     object ComboAddrType: TComboBox
-      Left = 340
+      Left = 24
       Height = 23
       Hint = 'Тип адресации к памяти'
-      Top = 16
+      Top = 136
       Width = 100
       ItemHeight = 15
       Items.Strings = (
@@ -287,6 +298,7 @@ object MainForm: TMainForm
         '2BYTE'
         '2BYTE_1BIT'
       )
+      ParentFont = False
       ParentShowHint = False
       ShowHint = True
       Style = csDropDownList
@@ -294,10 +306,10 @@ object MainForm: TMainForm
       Visible = False
     end
     object ComboMWBitLen: TComboBox
-      Left = 234
+      Left = 24
       Height = 23
       Hint = 'Длинна адреса в битах'
-      Top = 16
+      Top = 96
       Width = 100
       ItemHeight = 15
       Items.Strings = (
@@ -307,6 +319,7 @@ object MainForm: TMainForm
         '11'
         '12'
       )
+      ParentFont = False
       ParentShowHint = False
       ShowHint = True
       TabOrder = 3
@@ -314,38 +327,40 @@ object MainForm: TMainForm
       Visible = False
     end
     object Label5: TLabel
-      Left = 234
+      Left = 24
       Height = 16
-      Top = 0
+      Top = 80
       Width = 100
       Alignment = taCenter
       AutoSize = False
       Caption = 'Длина адреса'
       ParentColor = False
+      ParentFont = False
       Visible = False
     end
     object Label3: TLabel
-      Left = 0
+      Left = 8
       Height = 15
       Top = 0
       Width = 52
       Caption = 'EEPROM: '
       ParentColor = False
+      ParentFont = False
     end
     object LabelChipName: TLabel
-      Left = 0
+      Left = 8
       Height = 22
-      Top = 17
-      Width = 120
+      Top = 16
+      Width = 144
       AutoSize = False
       Font.Style = [fsBold]
       ParentColor = False
       ParentFont = False
     end
     object ComboSPICMD: TComboBox
-      Left = 340
+      Left = 24
       Height = 23
-      Top = 16
+      Top = 136
       Width = 100
       ItemHeight = 15
       ItemIndex = 0
@@ -356,28 +371,31 @@ object MainForm: TMainForm
         '95xx'
       )
       OnChange = ComboSPICMDChange
+      ParentFont = False
       Style = csDropDownList
       TabOrder = 4
       Text = '25xx'
     end
     object LabelSPICMD: TLabel
-      Left = 340
+      Left = 24
       Height = 16
-      Top = 0
+      Top = 120
       Width = 100
       Alignment = taCenter
       AutoSize = False
       Caption = 'Команды SPI'
       ParentColor = False
+      ParentFont = False
     end
     object Panel_I2C_DevAddr: TPanel
-      Left = 448
-      Height = 37
-      Top = 0
-      Width = 336
+      Left = 8
+      Height = 64
+      Top = 168
+      Width = 144
       BevelOuter = bvNone
-      ClientHeight = 37
-      ClientWidth = 336
+      ClientHeight = 64
+      ClientWidth = 144
+      ParentFont = False
       TabOrder = 5
       UseDockManager = False
       Visible = False
@@ -390,6 +408,7 @@ object MainForm: TMainForm
         AutoSize = False
         Caption = 'Адрес устройства'
         ParentColor = False
+        ParentFont = False
       end
       object CheckBox_I2C_DevA7: TToggleBox
         Left = 0
@@ -399,6 +418,7 @@ object MainForm: TMainForm
         Caption = '1'
         Checked = True
         OnChange = I2C_DevAddrChange
+        ParentFont = False
         State = cbChecked
         TabOrder = 0
       end
@@ -409,6 +429,7 @@ object MainForm: TMainForm
         Width = 20
         Caption = '0'
         OnChange = I2C_DevAddrChange
+        ParentFont = False
         TabOrder = 1
       end
       object CheckBox_I2C_DevA5: TToggleBox
@@ -419,6 +440,7 @@ object MainForm: TMainForm
         Caption = '1'
         Checked = True
         OnChange = I2C_DevAddrChange
+        ParentFont = False
         State = cbChecked
         TabOrder = 2
       end
@@ -429,6 +451,7 @@ object MainForm: TMainForm
         Width = 20
         Caption = '0'
         OnChange = I2C_DevAddrChange
+        ParentFont = False
         TabOrder = 3
       end
       object CheckBox_I2C_A2: TToggleBox
@@ -438,6 +461,7 @@ object MainForm: TMainForm
         Width = 20
         Caption = '0'
         OnChange = I2C_DevAddrChange
+        ParentFont = False
         TabOrder = 4
       end
       object CheckBox_I2C_A1: TToggleBox
@@ -447,6 +471,7 @@ object MainForm: TMainForm
         Width = 20
         Caption = '0'
         OnChange = I2C_DevAddrChange
+        ParentFont = False
         TabOrder = 5
       end
       object CheckBox_I2C_A0: TToggleBox
@@ -456,24 +481,26 @@ object MainForm: TMainForm
         Width = 20
         Caption = '0'
         OnChange = I2C_DevAddrChange
+        ParentFont = False
         TabOrder = 6
       end
       object CheckBox_I2C_ByteRead: TCheckBox
-        Left = 152
+        Left = 0
         Height = 19
-        Top = 18
+        Top = 40
         Width = 128
         Caption = 'Побайтовое чтение'
+        ParentFont = False
         TabOrder = 7
       end
     end
   end
   object MPHexEditorEx: TMPHexEditorEx
     Cursor = crIBeam
-    Left = 0
-    Height = 248
-    Top = 93
-    Width = 802
+    Left = 160
+    Height = 307
+    Top = 34
+    Width = 682
     CreateBackup = False
     BackupExtension = '.bak'
     SupportsOtherClipFormats = False
@@ -486,8 +513,11 @@ object MainForm: TMainForm
     PrintFont.Name = 'Courier New'
     ZoomOnWheel = False
     Align = alClient
+    Anchors = []
+    BorderStyle = bsNone
     Font.CharSet = RUSSIAN_CHARSET
-    Font.Height = -15
+    Font.Color = clBlack
+    Font.Height = -13
     Font.Name = 'Courier New'
     Font.Pitch = fpFixed
     Font.Quality = fqDraft
@@ -522,69 +552,69 @@ object MainForm: TMainForm
     BytesPerBlock = 8
     SeparateBlocksInCharField = False
     ColWidths = (
-      120
+      109
       6
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      24
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      16
+      8
+      16
+      8
       9
-      18
       9
-      18
       9
-      18
       9
-      18
       9
-      18
       9
-      18
       9
-      18
       9
-      27
       9
-      18
       9
-      18
       9
-      18
       9
-      18
       9
-      18
       9
-      18
       9
-      18
-      9
-      18
-      9
-      10
-      10
-      10
-      10
-      10
-      10
-      10
-      10
-      10
-      10
-      10
-      10
-      10
-      10
-      10
-      19
+      17
     )
     RowHeights = (
-      22
+      21
       0
-      19
+      18
     )
   end
   object StatusBar: TStatusBar
     Left = 0
     Height = 23
     Top = 341
-    Width = 802
+    Width = 842
     Panels = <    
       item
         Width = 120
@@ -595,6 +625,7 @@ object MainForm: TMainForm
       item
         Width = 50
       end>
+    ParentFont = False
     SimplePanel = False
     SizeGrip = False
   end
@@ -602,13 +633,14 @@ object MainForm: TMainForm
     Left = 0
     Height = 90
     Top = 389
-    Width = 802
+    Width = 842
     Align = alBottom
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire FLASH/EEPROM v2.0.0a10'
+      'Программатор SPI, I2C, Microwire FLASH/EEPROM v2.0.1a1'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'asprogrammer@inbox.ru'
     )
+    ParentFont = False
     PopupMenu = LogPopupMenu
     ReadOnly = True
     ScrollBars = ssVertical
@@ -619,7 +651,7 @@ object MainForm: TMainForm
     Left = 0
     Height = 5
     Top = 384
-    Width = 802
+    Width = 842
     Align = alBottom
     Anchors = [akBottom]
     ResizeAnchor = akBottom
@@ -627,18 +659,18 @@ object MainForm: TMainForm
   object OpenDialog: TOpenDialog
     Filter = '*.*|*.*'
     Options = [ofFileMustExist, ofEnableSizing, ofViewDetail]
-    left = 160
-    top = 240
+    left = 312
+    top = 128
   end
   object SaveDialog: TSaveDialog
     Filter = '*.bin|*.bin|*.*|*.*'
     Options = [ofOverwritePrompt, ofEnableSizing, ofViewDetail]
-    left = 192
-    top = 240
+    left = 272
+    top = 128
   end
   object MainMenu: TMainMenu
-    left = 224
-    top = 240
+    left = 336
+    top = 64
     object MenuChip: TMenuItem
       Caption = 'Микросхема'
       object MenuFindChip: TMenuItem
@@ -854,8 +886,8 @@ object MainForm: TMainForm
   object ImageList: TImageList
     Height = 32
     Width = 32
-    left = 256
-    top = 240
+    left = 400
+    top = 64
     Bitmap = {
       4C69090000002000000020000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
@@ -2021,8 +2053,8 @@ object MainForm: TMainForm
     end
   end
   object EditorPopupMenu: TPopupMenu
-    left = 288
-    top = 200
+    left = 448
+    top = 56
     object MenuGotoOffset: TMenuItem
       Caption = 'Перейти по адресу'
       OnClick = MenuGotoOffsetClick
@@ -2047,8 +2079,8 @@ object MainForm: TMainForm
     end
   end
   object LogPopupMenu: TPopupMenu
-    left = 321
-    top = 201
+    left = 512
+    top = 56
     object CopyLogMenuItem: TMenuItem
       Caption = 'Копировать'
       OnClick = CopyLogMenuItemClick
